welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:5: error: not found: value v2
  return ((a2==b2)||(a2==c2)||(v2==c2)) 
                               ^